# juniper_policy_creat

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
poac/templates/: index.html
tests/: test_endpoints.py
