[project]
name = "juniper-policy-generator"
version = "0.1.0"
description = "Generate Juniper SRX set commands from a simple web form. Auto-creates address and application objects."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
